# common-app

./: InstallWgts.sh  Makefile  README.txt  app_install.sh  build.sh  groups  package_list  project.config  readme.txt  tizen-release  weston-genivi.ini
AudioControl/: .project  .tproject  Makefile  Makefile~  config.xml  files.txt  index.html  style.css
AudioControl/css/: style.css  style.css~
AudioControl/js/: main.js  most.js
AudioControl/packaging/: AudioControl.spec
BoilerPlateExtension/src/: bp.h
Boilerplate/: .project  Makefile  Makefile~  config.xml  index.html
Boilerplate/css/: car.css  style.css
Boilerplate/js/: bootstrap.js  main.js
Boilerplate/packaging/: BoilerPlate.spec~
Browser/: Makefile  Makefile.orig  Makefile~  config.xml  error.html  index.html  search.html  warning.html
Browser/css/: style.css  tabs.css
Browser/js/: historyModel.js  keyboard_main.js
Browser/packaging/: Browser.spec
Cameras/: .gitignore  Makefile  config.xml  index.html  manifest.json
Cameras/css/: JLRCameras.css
Cameras/js/: JLRCameras.api.js  JLRCameras.js  main.js
Cameras/packaging/: Cameras.manifest  Cameras.spec
DNA/: Makefile  index.html
DNA/css/: style.css
DNA/js/: bootstrap.js  carIndicator.js  dnaModel.js  installedApps.js  main.js
DNA_Browser/: Makefile  Makefile~  README.txt  config.xml  config.xml~  error.html  index.html  search.html  warning.html
DNA_Browser/css/: browser.css  error.css  style.css  tabs.css  warning.css
DNA_Browser/js/: browser.js  historyModel.js  keyboard_kj_r1.js  (+4 more)
DNA_Cameras/: Makefile  config.xml  index.html  templates.html
DNA_Dashboard/: DNA_Dashboard.wgt  Makefile  README.txt  config.xml  index.html
DNA_FMRadio/: index.html
DNA_Fingerprint/: Makefile  config.xml  index.html
DNA_GoogleMaps/: Makefile  config.xml  index.html
DNA_HelloTizen/: DNAHelloTizen.wgt  DNA_HelloTizen.wgt  Makefile  config.xml  index.html
DNA_HomeScreen/: DNA.wgt  DNA_HomeScreen.wgt  Makefile  Makefile~  README.TXT  config.xml  index.html
DNA_MOST_AudioSettings/: Makefile  config.xml  index.html
DNA_MediaManager/: DNA_MediaManager.wgt  Makefile  Makefile_old  config.xml  index.html  index_old.html  mm
DNA_NFC/: Makefile  README.txt  config.xml  index.html  not_index.html
DNA_Navigation/: Makefile  README.TXT  config.xml  index.html
DNA_News/: Makefile  README.txt  autorun  config.xml  imports.html  index.html  news_article_template.html  sports.xml
DNA_Phone/: Makefile  config.xml  index.html
DNA_RVITest/: Makefile  config.xml  index.html  xx.xml
DNA_SDL/: Makefile  config.xml  index.html
DNA_Voiceprint/: Makefile~  config.xml  index.html
DNA_Weather/: Makefile  README.txt  api_key  config.xml  index.html  p1.txt  p2.txt  package_delta.txt~
Dashboard/: Makefile  config.xml  index.html
GestureGame/: Makefile  Makefile~  config.xml  finale.html  game-display.html  index.html  instructions.html  intro-temp.html  options.html  signature1.xml
Handwriting/: Makefile  config.xml  index.html
HomeScreen/: .gitignore  .project  Makefile  config.xml  index.html
LEAP/: .project  Makefile  config.xml  index.html
MediaManager/: Makefile  Makefile~  config.xml  index.html  index_old.html  mm
News/: Makefile  config.xml  index.html
Phone/: .gitignore  Makefile  config.xml  index.html
Weather/: .project  Makefile  Makefile~  author-signature.xml  config.xml  index.html  manifest.json  package_delta.txt  packages.txt
_common/: Makefile.BACKUP.6562
cameras_ext/: CMakeLists.txt
cameras_ext/docs/: ReleaseNotes.txt
cameras_ext/jlr_cmss/: Makefile
cameras_ext/jlr_cmss/config/: config.xml
cameras_ext/jlr_cmss/service/: com.jlr.JLRCameras.service  jlr_cmss.service
cameras_ext/jlr_cmss/src/: jlr_cmss.c
cameras_ext/packaging/: cameras.spec  jlr_cmss.spec  wrt-plugins-cameras.spec
cameras_ext/pkgconfigs/: cameras.pc  cameras.pc.in  tizen_cameras.pc  tizen_cameras.pc.in
cameras_ext/src/: CMakeLists.txt  JLRCameras.cc  JLRCameras.h  cameras_api.js  cameras_extension.cc  cameras_extension.h  cameras_instance.cc  cameras_instance.h  config.xml
common/: boilerplateImports.html
css/: common.css  nouislider.fox.css  old_common.css  style.css
fingerprint_ext/: Makefile
js/: HomeScreenMain.js  carIndicator.js  init.js  installedApps.js  main.js
json/: apps.json
most/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.txt  build.sh  build.xml  buildEx.sh  buildMost.sh  buildMost.sh.orig  common.mk  env.ivipoc  ermo.sh  ermogold.sh  exmo.sh
most/docs/native/: index.html
most/example/: CMakeLists.txt
most/example/packaging/: wrt-plugins-ivi-example.spec
most/example/pkgconfigs/: wrt-plugins-tizen-example.pc  wrt-plugins-tizen-example.pc.in
most/example/src/: Example.cpp  Example.h  Example.idl  JSExample.cpp  JSExample.h  config.xml  plugin_initializer.cpp
most/intelPoc99.Boilerplate/: .project  README.txt  author-signature.xml  config.xml  index.html  signature1.xml  signature2.xml
most/intelPoc99.Boilerplate/js/: example.js  main.js
most/intelPoc99.Boilerplate/js/services/: bootstrap.js  carIndicator.js  extends.js  speech.js  themeengine.js
most/most/: config.dtd  mostSetup.sh
most/most/pkgconfigs/: wrt-plugins-tizen-most.pc  wrt-plugins-tizen-most.pc.in
most/most/src/: AudioMost.h  ControlDesc.cpp  ControlDesc.h  Most.cpp  Most.h  Most.idl  Optolyzer.cpp  Optolyzer.h
most/most/ut/: Makefile  fullHW.cpp  utOL.h
most/packaging/: wrt-plugins-ivi-most.spec
most/src/: AudioMost.cpp  AudioMost.h  ControlDesc.h  Doxyfile  JSMost.cpp  JSMost.h  Most.cpp  Most.h  Optolyzer.cpp  Optolyzer.h  config.xml  foo.cpp  most_api.js  most_extension.cpp  most_extension.h  most_instance.cpp  most_instance.h  plugin_initializer.cpp
most/ut/: api.cpp  noHW.cpp  olOnly.cpp  ot.cpp
packaging/: HomeScreen.spec  Homescreen.spec  _common.spec  agl-app-suite.spec  agl_app_suite.spec  agl_plugin_suite.spec  common-app.spec  common.spec
systemd/: DNA_Homescreen-launchpad-ready.path  DNA_Homescreen.service  DNA_launch-RPM-spec.example  DNA_launcher.sh
wkb_client_ext/: Makefile  Makefile.in
(+604 files in other folders)
