SET(TARGET_NAME ${tizen_cameras_target})

cmake_minimum_required(VERSION 2.8)

add_definitions(-std=c++11)

include(FindPkgConfig)

PKG_CHECK_MODULES(REQUIRED gio-2.0 json-glib-1.0)

INCLUDE_DIRECTORIES(
	${INCLUDE_COMMON}
)

SET(CMAKE_INSTALL_RPATH
	${CMAKE_INSTALL_RPATH}
	${CMAKE_INSTALL_PREFIX}/${DESTINATION_LIB_PREFIX}
)

SET(SRCS_IMPL
	../../extension_common/extension.cc
	cameras_instance.cc
	cameras_extension.cc
	JLRCameras.cc
	cameras_api.cc
)

ADD_LIBRARY(${TARGET_NAME} SHARED ${SRCS_IMPL})

TARGET_LINK_LIBRARIES(${TARGET_NAME}
	${LIBS_COMMON}
)

INSTALL(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${DESTINATION_LIB_PREFIX})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config.xml DESTINATION ${DESTINATION_LIB_PREFIX})
INSTALL(
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${DESTINATION_HEADER_PREFIX}/cameras
	FILES_MATCHING PATTERN "*.h" PATTERN "CMakeFiles" EXCLUDE
)


